Fixed Alignment issues and bugs

--- a/src/components/SpaForMen/SpaForMen.module.css
+++ b/src/components/SpaForMen/SpaForMen.module.css
@@ -1,7 +1,7 @@
 
 .Card{
   width: 100%;
-  padding: 1rem;
+  padding: 0.2rem;
   
 }
 
@@ -19,7 +19,8 @@
 .cardMedia>img{
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
+  border-radius: 12px;
 }
 
 .single-card{
@@ -58,6 +59,9 @@ margin-bottom: 8px;
   white-space: nowrap;
 }
 .single-card{
+  width:95%;
   height: 10rem;
+  margin-right: 3px;
+  margin-left: 3px;
 }
 }
